# dreamrag

./: .env.prod  README.md  archive.html  dashboard.html  docker-compose.api.yml  docker-compose.yml  homepage.html  index.html  preview.html  profile.html  progress.md  proposal.tex  theme.css
frontend/: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  jest.config.ts  next.config.js  package-lock.json  package.json  research-findings.md  startup.sh
frontend/.tasks/: main.md  widget-protocol-design.md
frontend/__mocks__/: lit-labs-react.js
frontend/backend/: .env.example  Dockerfile  __init__.py  langgraph.json  pyproject.toml  server.py
frontend/backend/agent/: __init__.py  graph.py  handoff.py  state.py  tools.py
frontend/backend/agent/subagents/: __init__.py  factory.py  registry.py
frontend/backend/app/core/: __init__.py  adapters.py  qwen_embeddings.py  rag_store.py  user_profile.py
frontend/backend/data/: freud_dreams.txt  jung_psychology_unconscious.txt
frontend/backend/scripts/: build_corpus_stats.py  ingest.py  ingest_knowledge.py  ingest_knowledge.sh  trial_ingest.py
frontend/backend/tests/: test_agent.py  test_user_profile_cards.py
frontend/backend/tests/cloud_e2e/: README.md  test_pipeline.py
frontend/docs/: 3d_particle_morph_practices.md  3d_shape_morph.md  bug-canvas-clear.md  bug-tool-registration-pipeline.md  coursebuilder-transform-guide.md  gcp-smoke-test.md  thinking-token-rendering.md  widget-design-system.md  widget-protocol.md
scripts/: smoke_gcp.sh  verify_search_fix.sh
(+100 files in other folders)
